kubernetes/main/apps/home-automation/scrypted/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scrypted
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: scrypted
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: home-assistant
      toPorts:
        - ports:
            - port: "34135"
              protocol: TCP
